rework and cleanup of much
* Rework of queue cli to use API
* Moved queue cli under client cli
* Updated docs
* Cleaned up some openapi genrated vars
* Added nil checks for api responses in cli
* Much other cleanups and adjustments to new patterns
* Created a client manager interface for cli uses
